# feed-rs

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
feed-rs/: Cargo.toml  README.md
feed-rs/fixture/: atom_example_7.xml  atom_mediarss_reddit_1.xml  atom_publishing_spec_1.xml  rss_2.0_example_4.xml  rss_2.0_example_6.xml  rss_2.0_jefapod.xml  rss_2.0_spiegel.xml  xml_sample_2.xml
feed-rs/fixture/atom/: atom_comments_1.serde.json  atom_comments_1.xml  atom_content_src.serde.json  atom_content_src.xml  atom_entry_1.serde.json  atom_example_1.serde.json  atom_example_2.serde.json  atom_example_3.serde.json  atom_example_4.serde.json  atom_example_5.serde.json  atom_example_6.serde.json  atom_example_6.xml  atom_example_7.serde.json  atom_example_reddit.serde.json  atom_example_xhtml.xml  atom_mediarss_newscred_1.serde.json  atom_mediarss_reddit_1.serde.json  atom_mediarss_youtube_1.serde.json  atom_pub_spec_1.serde.json  atom_relative.serde.json  atom_scattered.serde.json  atom_scattered.xml  atom_spec_1.serde.json  atom_xml_base.serde.json
feed-rs/fixture/jsonfeed/: jsonfeed_elastic_1.1.serde.json  jsonfeed_example_1.serde.json  jsonfeed_spec_1.serde.json
feed-rs/fixture/rss0/: rss_0.91_encoding_1.serde.json  rss_0.91_encoding_2.serde.json  rss_0.91_missing_id.serde.json  rss_0.91_spec_1.serde.json  rss_0.92_spec_1.serde.json
feed-rs/fixture/rss1/: rss_1.0_biorxiv.serde.json  rss_1.0_debian.serde.json  rss_1.0_example_1.serde.json  rss_1.0_example_2.serde.json  rss_1.0_iso8859.serde.json  rss_1.0_spec_1.serde.json  rss_1.0_spec_2.serde.json
feed-rs/fixture/rss2/: rss_2.0_anchorfm.serde.json  rss_2.0_bbc.serde.json  rss_2.0_ch9.serde.json  rss_2.0_ch9.xml  rss_2.0_cloudflare.serde.json  rss_2.0_dbengines.serde.json  rss_2.0_docuverse_comments.serde.json  rss_2.0_docuverse_comments.xml  rss_2.0_element_io.serde.json  rss_2.0_encoding_1.serde.json  rss_2.0_example_1.serde.json  rss_2.0_example_2.serde.json  rss_2.0_example_3.serde.json  rss_2.0_example_4.serde.json  rss_2.0_example_5.serde.json  rss_2.0_example_6.serde.json  rss_2.0_ghost_1.serde.json  rss_2.0_ghost_2.serde.json  rss_2.0_heated.serde.json  rss_2.0_ilgiornale.serde.json  rss_2.0_ilmessaggero.serde.json  rss_2.0_iprogrammer.serde.json  rss_2.0_iprogrammer.xml  rss_2.0_kdist.serde.json  rss_2.0_matrix.serde.json  rss_2.0_nbcny.serde.json  rss_2.0_nightvale.serde.json  rss_2.0_peertube.serde.json  rss_2.0_peertube.xml  rss_2.0_reddit.serde.json  rss_2.0_relurl_1.serde.json  rss_2.0_relurl_1.xml  rss_2.0_relurl_2.serde.json  rss_2.0_rps.serde.json  rss_2.0_spec_1.serde.json  rss_2.0_spiegel.serde.json  rss_2.0_spreaker.serde.json  rss_2.0_transistorfm.serde.json  rss_2.0_transistorfm.xml  rss_2.0_vimeo_media.serde.json  (+2 more)
feed-rs/src/: lib.rs  model.rs
feed-rs/src/parser/: itunes.rs  mediarss.rs  mod.rs  podcast.rs  tests.rs  util.rs
feed-rs/src/parser/atom/: mod.rs  tests.rs
feed-rs/src/parser/common/: mod.rs
feed-rs/src/parser/json/: mod.rs  tests.rs
feed-rs/src/parser/rss0/: mod.rs  tests.rs
feed-rs/src/parser/rss1/: mod.rs  tests.rs
feed-rs/src/parser/rss2/: mod.rs  tests.rs
feed-rs/src/util/: element_source.rs  mod.rs  test.rs
feed-rs/src/xml/: mod.rs  tests.rs
feed-rs/tests/: sanitize.rs
fixture/: atom.xml  atom_example_2.xml  rss_0.91_spec_1.xml  rss_0.92_spec_1.xml  rss_2.0_example_5.xml  rss_2.0_spec_1.xml
src/: entry.rs  feed.rs  lib.rs  model.rs
src/parser/: atom.rs  mod.rs  rss1.rs  rss2.rs  rss2old.rs
src/parser/atom/: mod.rs  tests.rs
src/parser/rss0/: mod.rs  tests.rs
src/parser/rss1/: mod.rs
src/parser/rss2/: mod.rs  tests.rs
src/util/: element_source.rs  mod.rs  test.rs
testurls/: Cargo.toml
testurls/src/: main.rs
tools/: Cargo.toml
