[package]
name = "feed-rs"
version = "0.2.0"
edition = '2018'
authors = ["Hiroki Kumamoto <kumabook@live.jp>", "Mark Pritchard <mpritcha@gmail.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]
license = "MIT"
homepage = "https://github.com/feed-rs/feed-rs"
repository = "https://github.com/feed-rs/feed-rs.git"
description = "A simple RSS feed parser (RSS 2.0, ATOM, RSS 1.0)"
keywords = ["feed", "rss", "atom"]

[dependencies]
xml-rs = "0.8.0"
chrono = { version = "0.4.7" }
uuid = { version = "0.7.4", features = ["v4"] }
