[package]
name = "feed-rs"
version = "0.2.0"
edition = '2018'
authors = ["Hiroki Kumamoto <kumabook@live.jp>", "Mark Pritchard <mpritcha@gmail.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]
license = "MIT"
homepage = "https://github.com/feed-rs/feed-rs"
repository = "https://github.com/feed-rs/feed-rs.git"
description = "A simple RSS feed parser (RSS 2.0, ATOM, RSS 1.0)"
keywords = ["feed", "rss", "atom"]

[dependencies]
xml-rs = "0.8"
chrono = { version = "0.4" }
mime = "0.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
