[package]
name = "feed-rs"
version = "2.3.1"
edition = '2024'
authors = ["Mark Pritchard <mpritcha@gmail.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-MIT",
    "README.md",
    "fixture/*"
]
license = "MIT"
homepage = "https://github.com/feed-rs/feed-rs"
repository = "https://github.com/feed-rs/feed-rs.git"
description = "A feed parser that handles Atom, RSS 2.0, RSS 1.0, RSS 0.x and JSON Feed"
keywords = ["rss", "atom", "json", "jsonfeed", "parser"]
categories = ["parser-implementations"]
readme = "README.md"

[badges]
travis-ci = { repository = "feed-rs/feed-rs", branch = "master" }

[dependencies]
ammonia = { version = "4.1.0", optional = true }
chrono = { version = "0.4.41", features = ["serde"] }
mediatype = { version = "0.21.0", features = ["serde"] }
quick-xml = { version = "0.37.5", features = ["encoding"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
siphasher = "1.0.1"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }

[features]
sanitize = ["dep:ammonia"]
