[package]
name = "feed-rs"
version = "2.4.0"
edition = '2021'
authors = ["Mark Pritchard <mpritcha@gmail.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-MIT",
    "README.md",
    "fixture/*"
]
license = "MIT"
homepage = "https://github.com/feed-rs/feed-rs"
repository = "https://github.com/feed-rs/feed-rs.git"
description = "A feed parser that handles Atom, RSS 2.0, RSS 1.0, RSS 0.x and JSON Feed"
keywords = ["rss", "atom", "json", "jsonfeed", "parser"]
categories = ["parser-implementations"]
readme = "README.md"

[badges]
travis-ci = { repository = "feed-rs/feed-rs", branch = "master" }

[dependencies]
ammonia = { version = "4.1.3", optional = true }
chrono = { version = "0.4.45", features = ["serde"] }
mediatype = { version = "0.21.0", features = ["serde"] }
quick-xml = { version = "0.41.0", features = ["encoding"] }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
siphasher = "1.0.3"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4"] }

[features]
sanitize = ["dep:ammonia"]
